--- a/shopping_app/pubspec.yaml
+++ b/shopping_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.5
   badges: ^3.1.2
   animated_notch_bottom_bar: ^1.0.0
+  lottie: ^2.6.0
 
 
 dev_dependencies:
