--- a/shopping_app/pubspec.yaml
+++ b/shopping_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   badges: ^3.1.2
   animated_notch_bottom_bar: ^1.0.0
   lottie: ^2.6.0
+  fluttertoast: ^8.0.6
 
 
 dev_dependencies:
